crates/pgls_hover/tests/snapshots/table_hover_nullable_and_basic_defaults.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select * from users
                 ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4 - not null
- name: text - nullable - default: anonymous
- score: int4 - nullable - default: 0
- enabled: bool - nullable - default: false
- created_at: timestamptz - nullable
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 16.38 kB  
```
