crates/pgls_hover/tests/snapshots/table_hover_quoted_schema.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select * from "auth".users
                        ↑ hovered here
```

# Hover Results
### `auth.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4 - not null
- email: varchar(255) - not null
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 8.19 kB  
```
